small padding nits

--- a/projects/appian.html
+++ b/projects/appian.html
@@ -72,7 +72,7 @@
 	</br>
 	<div class="container_sideBySide"> 
 			<div class="sideBySideItem width_50">
-					<img class="summary_image" src="../assets/icons.gif"/>
+					<img class="summary_image outline" src="../assets/icons.gif"/>
 			</div>
 			<div class="sideBySideItem width_50">
 				<div class="card_title">Icon Redesign</div></br>
