--- a/projects/dartmouthdays.html
+++ b/projects/dartmouthdays.html
@@ -57,97 +57,97 @@
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-04.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-03.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-01.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-05.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-23.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-24.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-25.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-08.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-09.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-26.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-02.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-10.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-11.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-12.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-13.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-14.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-15.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-16.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-17.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-35.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-32.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-34.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-27.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-28.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-29.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-30.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-31.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-39.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-37.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-36.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-38.png"/>
                     </div>
-                    <div class="sideBySideItem width_50">
+                    <div class="sideBySideItem width_50 sideBySideItem_isLast">
                             <img class="summary_image" src="../assets/dartmouth-40.png"/>
                     </div>
                     <div class="sideBySideItem width_50">
