--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -60,7 +60,7 @@
                 <img class="summary_image" src="../assets/doodle-02.jpg"/>
                 <div class="image_text"><b>Doodle no.2 |  </b>Fun bouldering and Dr. Seuss plants in Joshua Tree last week! Learned that juniper berries are essential for gin, that red buckwheat smells like cinnamon, and that every single climb here is crazy sandbagged 🧗🏻‍♀️😂</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-03.jpg"/>
                     <div class="image_text"><b>Doodle no.3 |  </b>Camping adventures last week on a dry lakebed & testing out if my sleeping bag was actually rated for below-freezing temps ❄️🌵</div>
             </div>
@@ -68,15 +68,15 @@
                     <img class="summary_image" src="../assets/doodle-04.jpg"/>
                     <div class="image_text"><b>Doodle no.4 |  </b>Learning how to be flexible with our new office setup 🚙💻🏔</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-05.jpg"/>
-                    <div class="image_text"><b>Doodle no.4 |  </b>Made it to Oceanside! Easy to forget it’s winter when you can surf after work 🏄🏻‍♀️☀️🏝</div>
+                    <div class="image_text"><b>Doodle no.5 |  </b>Made it to Oceanside! Easy to forget it’s winter when you can surf after work 🏄🏻‍♀️☀️🏝</div>
             </div>
             <div class="sideBySideItem width_50">
                     <img class="summary_image" src="../assets/doodle-06.jpg"/>
                     <div class="image_text"><b>Doodle no.6 |  </b>A lovely weekend hike with the even lovelier Kate 🥾👯‍♀️🌳</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-07.jpg"/>
                     <div class="image_text"><b>Doodle no.7 |  </b>A stroll in La Jolla featuring delightful giant bubbles from @thebubblepirate 🧼🪄🌴</div>
             </div>
@@ -84,7 +84,7 @@
                     <img class="summary_image" src="../assets/doodle-08.jpg"/>
                     <div class="image_text"><b>Doodle no.8 |  </b>The yarn monster emerges 🧶😈 I’ve been experimenting with fiber arts and becoming a big collector of Michael’s Rewards coupons these past few months — excited to share some projects I made!</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-09.jpg"/>
                     <div class="image_text"><b>Doodle no.9 |  </b>A majestic weekend among giants 🏕</div>
             </div>
@@ -92,7 +92,7 @@
                     <img class="summary_image" src="../assets/doodle-10.jpg"/>
                     <div class="image_text"><b>Doodle no.10 |  </b>Running for cover when the rain surprised us during a climbing session! ☀️➡️🌧</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-11.jpg"/>
                     <div class="image_text"><b>Doodle no.11 |  </b>Still am a bumbly goon in the water, but I’m getting better at surfing thanks to an endlessly patient and supportive teacher 🏄🏻‍♀️☀️</div>
             </div>
@@ -100,7 +100,7 @@
                     <img class="summary_image" src="../assets/doodle-12.jpg"/>
                     <div class="image_text"><b>Doodle no.12 |  </b>Last evening in California! heart is full and so is my tummy thanks to sushi & ice cream🍦🏝</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-13.jpg"/>
                     <div class="image_text"><b>Doodle no.13 |  </b>Sad to leave a great place and great companion, but excited to be back in DC just in time for spring 🌸</div>
             </div>
@@ -108,7 +108,7 @@
                     <img class="summary_image" src="../assets/doodle-14.jpg"/>
                     <div class="image_text"><b>Doodle no.14 |  </b>Weekday bocce tournament complete with color coordinated teams 🟡🔴🔵🟢 DC is so lovely in the spring!</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-15.jpg"/>
                     <div class="image_text"><b>Doodle no.15 |  </b>Anna visited and we did exactly two things this week: eat gelato and talk about what gelato to make next 🍨🍧</div>
             </div>
@@ -117,7 +117,7 @@
                     <div class="image_text"><b>Doodle no.16 |  </b>Early morning runs and rides on beautiful local trails 🚴🏻‍
                         Thankful for these outdoor spaces and thinking about how future generations can continue enjoying them — happy Earth Day🌲💚</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-17.jpg"/>
                     <div class="image_text"><b>Doodle no.17 |  </b>Pulled my first all-nighter re-designing a website for <a href="https://www.instagram.com/phoenix_bikes/?hl=en" class="link">@phoenix_bikes</a> as part of @aigadc ‘s 24-hour CreateAthon! Had an awesome time working with an extremely talented team to make this happen.. will share final designs once the site is live! 👩🏻‍💻🎨now to catch up on sleep...</div>
             </div>
@@ -125,7 +125,7 @@
                     <img class="summary_image" src="../assets/doodle-18.jpg"/>
                     <div class="image_text"><b>Doodle no.18 |  </b>A glorious flower party to celebrate Grace’s birthday and the completion of a highly anticipated pong table 🌸🏓 🎨</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-19.jpg"/>
                     <div class="image_text"><b>Doodle no.19 |  </b>Zooming down car-free, care-free roads with Tony in DC 🚲👍🏼🚙👎🏼</div>
             </div>
@@ -133,7 +133,7 @@
                     <img class="summary_image" src="../assets/doodle-20.jpg"/>
                     <div class="image_text"><b>Doodle no.20 |  </b>Got my second shot recently!!!!!!!!!!!!!!! So thankful, so relieved, so excited. ❤️💉</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-21.jpg"/>
                     <div class="image_text"><b>Doodle no.21 |  </b>A very rainy but very fun Nationals game — what a great way to wrap up a year in DC :’) See u soon 👋🏼⚾️🏟</div>
             </div>
@@ -141,7 +141,7 @@
                     <img class="summary_image" src="../assets/doodle-22.jpg"/>
                     <div class="image_text"><b>Doodle no.22 |  </b>You know what they say, “there’s no place like home” 🏡</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-23.jpg"/>
                     <div class="image_text"><b>Doodle no.23 |  </b>Turns out my brother and his random stick are *really* good at catching fish! 🎣</div>
             </div>
@@ -149,7 +149,7 @@
                     <img class="summary_image" src="../assets/doodle-24.jpg"/>
                     <div class="image_text"><b>Doodle no.24 |  </b>My dad and I have lost monopoly many times in a row because my brother keeps maxing out the most expensive property and we KEEP LANDING ON IT 🙈🤑💸</div>
             </div>
-            <div class="sideBySideItem width_50">
+            <div class="sideBySideItem width_50 sideBySideItem_isLast">
                     <img class="summary_image" src="../assets/doodle-25.jpg"/>
                     <div class="image_text"><b>Doodle no.25 |  </b>Showing my brother who’s BOSS 😎💦</div>
             </div>
@@ -157,7 +157,7 @@
                 <img class="summary_image" src="../assets/doodle-26.jpg"/>
                 <div class="image_text"><b>Doodle no.26 |  </b>Weather has been awfully rainy lately, but on the bright side we’ve had some BEAUTIFUL panoramic rainbows! 🌈</div>
                 </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                 <img class="summary_image" src="../assets/doodle-27.jpg"/>
                 <div class="image_text"><b>Doodle no.27 |  </b>A weekend trip to one of my favorite places in the world, the Omaha zoo, woohoo! 🐠🐯</div>
         </div>
@@ -165,7 +165,7 @@
                 <img class="summary_image" src="../assets/doodle-28.jpg"/>
                 <div class="image_text"><b>Doodle no.28 |  </b>Back in the gym after a year and a half away! Feels so good to try hard, and it’s even better when you find a group of strong women to support & inspire you 💪🏼🧗🏻‍♀️</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/doodle-29.jpg"/>
                         <div class="image_text"><b>Doodle no.29 |  </b>Our little chicks are getting bigger (and louder!!) 🐥</div>
         </div>
@@ -173,7 +173,7 @@
                         <img class="summary_image" src="../assets/doodle-30.jpg"/>
                         <div class="image_text"><b>Doodle no.30 |  </b>Picked up Karen and Michael from the airport, it’s a full Yan house now 🏡 let the chaos begin!</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/doodle-31.jpg"/>
                         <div class="image_text"><b>Doodle no.31 |  </b>The best part of being with the sibs is watching all our old embarrassing videos together 😂📹</div>
         </div>
@@ -181,7 +181,7 @@
                         <img class="summary_image" src="../assets/doodle-32.jpg"/>
                         <div class="image_text"><b>Doodle no.32 |  </b>Moved back to DC wahoo! 🦴👯‍♀️🏠</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/doodle-33.jpg"/>
                         <div class="image_text"><b>Doodle no.33 |  </b>Ah yes, the classic flash flood that knocks down an ENTIRE TREE RIGHT BEHIND YOU ON THE TRAIL ⚡️🌳😱</div>
         </div>
@@ -189,7 +189,7 @@
                 <img class="summary_image" src="../assets/doodle-34.jpg"/>
                 <div class="image_text"><b>Doodle no.34 |  </b>A brief but beautiful return to the Upper Valley ⛰</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                 <img class="summary_image" src="../assets/doodle-35.jpg"/>
                 <div class="image_text"><b>Doodle no.35 |  </b>Scenic bouldering with a strong lady! 🧗🏻‍♀️</div>
         </div>
@@ -197,7 +197,7 @@
                 <img class="summary_image" src="../assets/doodle-36.jpg"/>
                 <div class="image_text"><b>Doodle no.36 |  </b>Reunited!!! 😃😃😃</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                 <img class="summary_image" src="../assets/doodle-37.jpg"/>
                 <div class="image_text"><b>Doodle no.37 |  </b>Had a lovely weekend surfing and hanging out in Atlantic City, but the real highlight was Shep getting a 2 second cameo on a @bengravyy video let’s gooo🍍🏄🏼‍♂️</div>
         </div>
@@ -205,7 +205,7 @@
                 <img class="summary_image" src="../assets/doodle-38-41.jpg"/>
                 <div class="image_text"><b>Doodles no.38-41 |  </b>Reggie on a roll! Lower production value because I didn’t bring my iPad, but I’ve got a sketchbook to document the bike adventure!</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/doodle-42.jpg"/>
                         <div class="image_text"><b>Doodle no.42 |  </b>Reggie on a roll finale! Now back to real life 😭</div>
         </div>
@@ -213,13 +213,13 @@
                         <img class="summary_image" src="../assets/doodle-43.jpg"/>
                         <div class="image_text"><b>Doodle no.43 |  </b>The best kind of work remote setup! 💻🚙🏄🏻‍</div>
         </div>
-        <div class="sideBySideItem width_50">
+        <div class="sideBySideItem width_50 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/doodle-44.jpg"/>
                         <div class="image_text"><b>Doodle no.44 |  </b>The roomie monster mash! 🎃</div>
         </div>
         <div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/doodle-45.jpg"/>
-                        <div class="image_text"><b>Doodle no.44 |  </b>It’s been a weird week, but keeping myself grounded thru peaceful morning rides to the climbing gym 🌒🚴🏻‍♀️</div>
+                        <div class="image_text"><b>Doodle no.45 |  </b>It’s been a weird week, but keeping myself grounded thru peaceful morning rides to the climbing gym 🌒🚴🏻‍♀️</div>
         </div>
 
             
