--- a/projects/haven.html
+++ b/projects/haven.html
@@ -4,7 +4,7 @@
 	<title>Regina | Haven</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://kit.fontawesome.com/be865165bc.js" crossorigin="anonymous"></script>
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -47,7 +47,7 @@
 			<div class="summary_description"> 
 				Mental health awarness is a huge focus these days. Headspace is give individuals many self-guided exercises, and plenty of sites match therapists to patients on a 1-on-1 basis. But there still isn't a succesful platform for mental health professionals to connect with the general public. And that's where Haven came in. 
 			</br></br>
-				The goal was to create connection and safe spaces in a way that caters to our semi-passive intake and short-attention span. We went through various iterations of ideas, but eventually <b>Haven was a platform where mental health providers would host live interactive events for all users and manage their own "haven" spaces that individuals could join </b>(rooms with their own short content and group chats).
+				The goal was to create connection and safe spaces in a way that caters to our semi-passive intake and short-attention span. We went through various iterations of ideas, but eventually <b>Haven was a platform where mental health providers would host live interactive events and manage their own "haven" community spaces</b> (rooms with their own short content and group chats).
 			</br></br>
 				I worked on this project as the only designer along with two developers who quit their jobs to pursue Haven. We raised $1 million in seed money, developed a working prototype, and tested with the public. Notice how everything is in past tense though? That's because we eventually decided to pivot in a different direction when things didn't quite take off. But, while this app wasn't the wild success we dreamed of, we learned countless lessons in "how to start up a start-up" that made our next project, <a href="superbill.html" class="link">SuperBill</a>, much more promising.
 				</br> 
@@ -70,20 +70,20 @@
 			</div>
 			<div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
-                        <img class="summary_image" src="../assets/haven-1.png"/>
+                        <img class="summary_image outline" src="../assets/haven-1.png"/>
 				</div>
 				<div class="sideBySideItem width_50 sideBySideItem_isLast" >
-                        <img class="summary_image" src="../assets/haven-2.png"/>
+                        <img class="summary_image outline" src="../assets/haven-2.png"/>
                 </div>
 			</div>
-			<img class="summary_image" src="../assets/haven-3.png"/>
+			<img class="summary_image outline" src="../assets/haven-3.png"/>
 		</br></br>
 			<div class="card_title">Iteration 2: The Wellness Quora</div>
 			<div class="content_text">
 				(write-up coming soon)
 			</div>
 			<img class="summary_image" src="../assets/havenb-1.png"/>
-			<img class="summary_image" src="../assets/havenb-4.png"/>
+			<img class="summary_image outline" src="../assets/havenb-4.png"/>
 			<div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/havenb-2.png"/>
@@ -132,7 +132,7 @@
 				<div class="sideBySideItem width_33">
                         <img class="summary_image" src="../assets/havene-2.png"/>
                 </div>
-                <div class="sideBySideItem width_33">
+                <div class="sideBySideItem width_33 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/havene-3.png"/>
 				</div>
 			</div>
