--- a/projects/projrunway.html
+++ b/projects/projrunway.html
@@ -63,12 +63,12 @@
 		<img class="summary_image" src="../assets/sewing2.png"/>
 		<div class="container_sideBySide"> 
 				<div class="sideBySideItem width_33">
-                        <img class="summary_image" src="../assets/sewing-a.png"/>
+                        <img class="summary_image outline" src="../assets/sewing-a.png"/>
 				</div>
 				<div class="sideBySideItem width_33">
                         <img class="summary_image" src="../assets/sewing-b.png"/>
                 </div>
-                <div class="sideBySideItem width_33">
+                <div class="sideBySideItem width_33 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/sewing-c.png"/>
 				</div>
 			</div>
@@ -84,7 +84,7 @@
 				<div class="sideBySideItem width_33">
                         <img class="summary_image" src="../assets/sewing-e.png"/>
                 </div>
-                <div class="sideBySideItem width_33">
+                <div class="sideBySideItem width_33 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/sewing-d.png"/>
 				</div>
 			</div>
@@ -95,12 +95,12 @@
 		<img class="summary_image" src="../assets/sewing4.png"/>
 		<div class="container_sideBySide"> 
 				<div class="sideBySideItem width_33">
-                        <img class="summary_image" src="../assets/sewing-g.png"/>
+                        <img class="summary_image outline" src="../assets/sewing-g.png"/>
 				</div>
 				<div class="sideBySideItem width_33">
                         <img class="summary_image" src="../assets/sewing-h.png"/>
                 </div>
-                <div class="sideBySideItem width_33">
+                <div class="sideBySideItem width_33 sideBySideItem_isLast">
                         <img class="summary_image" src="../assets/sewing-k.png"/>
 				</div>
 			</div>
@@ -111,7 +111,7 @@
 					<div class="sideBySideItem width_33">
 							<img class="summary_image" src="../assets/sewing-j.png"/>
 					</div>
-					<div class="sideBySideItem width_33">
+					<div class="sideBySideItem width_33 sideBySideItem_isLast">
 							<img class="summary_image" src="../assets/sewing-l.png"/>
 					</div>
 				</div>
