--- a/projects/woodsmokemag.html
+++ b/projects/woodsmokemag.html
@@ -46,8 +46,8 @@
 			<div class="summary_description"> 
                     The Dartmouth Outing Club (DOC) is home to the nation's oldest student-run outdoors club. It's a pretty incredible community with groups for everyone interested in getting outside, from the novice kayaker to the experienced boulderer. </br></br>
                     For Dartmouth's 250th anniversary, I designed and published Woodsmoke 2019, a celebration of the amazing explorations of folks in the DOC from 2017-2019. Special thanks to Rory Gawler '05 for supporting me throughout this process and to the Outdoor Programs Office for their dedication to getting us outside.
-            </br></br>
-            View the full PDF file <a href="https://outdoors.dartmouth.edu/doc/woodsmoke.html" class="link">here</a>!
+			</br>
+			<a href="https://outdoors.dartmouth.edu/doc/woodsmoke.html" target="_blank" class="button_secondary">View the full PDF <i class="fas fa-external-link-square-alt"></i></a>
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -58,10 +58,10 @@
 	<div class="container_content_stack vertical">
         <div class="card_title">Sample Pages</div>
     </br>
-        <img class="summary_image" src="../assets/sample1.png"/>
-        <img class="summary_image" src="../assets/sample2.png"/>
-        <img class="summary_image" src="../assets/sample3.png"/>
-		<img class="summary_image" src="../assets/sample4.png"/>
+        <img class="summary_image outline" src="../assets/sample1.png"/>
+        <img class="summary_image outline" src="../assets/sample2.png"/>
+        <img class="summary_image outline" src="../assets/sample3.png"/>
+		<img class="summary_image outline" src="../assets/sample4.png"/>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50">
