updated front page tags and typewriter

--- a/projects/punchy.html
+++ b/projects/punchy.html
@@ -123,7 +123,7 @@
 				</div>
 		</div>
 
-		
+		<div class="border"></div>
 		<div class="container_sideBySide"> 
 			<div class="sideBySideItem width_50">
 				<a href="climbingwall.html" class="navigation">
