--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 	<div class="content">
 		<!-- <div class="header_home"></div> -->
 		<div class="parallax">
-			<div class="site_title fullwidth">Hi there, I'm Regina</div>
+			<div class="site_title_container ">
+				<div class="site_title" id="title">
+				</div>
+			</div>
 			<div class="category_subtitle halfwidth">
-				A designer and engineer with a passion for the outdoors and human-centered design
+				A designer and engineer with a passion for <div class="inline_tag" id="tag1"></div> and <div class="inline_tag offset" id="tag2">Human-Centered Design</div>
 			</br></br>
 				This site is under construction during <p id="month" style="display:inline"></p> <p id="year" style="display:inline"></p> (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon!
 			</div>
@@ -114,6 +117,64 @@
 	const y = new Date();
 	let year = y.getFullYear();
 	document.getElementById("year").innerHTML = year;
+</script>
+<script>
+		var i = 0;
+		var txt = 'Hi there, I’m Regina';
+		var speed = 50;
+		var speed2 = 3000;
+		var index = 0;
+		var index2 = 0;
+		var text = ['biking', 'upcycling', 'fiber arts', 'rock climbing', 'ice skating'];
+		var textColor = ['#9adb84', '#edda87', '#c0abf5', '#f7be81', "#81d8e3"];
+		var textColor2 = ['#f1a7a7', '#9adb84', '#859bff'];
+		var text2 = ['women in tech', 'sustainability', 'inclusivity in the outdoors'];
+		
+		
+		
+		window.onload = function () {
+			typeWriter();
+			tags();
+			setTimeout(tags2, speed2/2);
+			
+		};
+		function typeWriter() {
+			if (i < txt.length) {
+			document.getElementById("title").innerHTML += txt.charAt(i);
+			i++;
+			setTimeout(typeWriter, speed);
+			}
+		};
+		function tags() {
+		  if (index < text.length-1) {
+			document.getElementById("tag1").innerHTML = text[index];
+			document.getElementById("tag1").style.backgroundColor = textColor[index];
+			document.getElementById("tag1").style.borderColor = textColor[index];
+			index++;
+			setTimeout(tags, speed2);
+		  } else {
+			document.getElementById("tag1").innerHTML = text[index];
+			document.getElementById("tag1").style.backgroundColor = textColor[index];
+			document.getElementById("tag1").style.borderColor = textColor[index];
+			index = 0;
+			setTimeout(tags, speed2);
+		  }
+		}
+		function tags2() {
+		  if (index2 < text2.length-1) {
+			document.getElementById("tag2").innerHTML = text2[index2];
+			document.getElementById("tag2").style.backgroundColor = textColor2[index2];
+			document.getElementById("tag2").style.borderColor = textColor2[index2];
+			index2++;
+			setTimeout(tags2, speed2);
+		  } else {
+			document.getElementById("tag2").innerHTML = text2[index2];
+			document.getElementById("tag2").style.backgroundColor = textColor2[index2];
+			document.getElementById("tag2").style.borderColor = textColor2[index2];
+			index2 = 0;
+			setTimeout(tags2, speed2);
+		  }
+		}
 </script>
 
 </html>
