--- a/projects/haven.html
+++ b/projects/haven.html
@@ -66,7 +66,11 @@
 			</div>
 			<div class="card_title">Iteration 1: The Live Video Blog</div>
 			<div class="content_text">
-				(...and this is as far as I've gotten -- write-up coming soon)
+				The first iteration was a coronavirus quarrantine-inspired idea to make counseling and advice more accessible to the general public. We found that there was a need for content (live and on-demand) from verified professionals especially as in-person counseling started moving towards remote sessions. 
+			</br></br>
+				Our goal with the live video blog was to give providers a platform to share their content to the public, and for interested individuals to subscribe for access to live sessions.
+			</br>
+				This idea was rather short-lived as our research showed that individuals didn't have interest in a video-only service (perhaps due to onset of zoom-fatigue)
 			</div>
 			<div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
@@ -80,7 +84,12 @@
 		</br></br>
 			<div class="card_title">Iteration 2: The Wellness Quora</div>
 			<div class="content_text">
-				(write-up coming soon)
+				We took our lessons from the first idea ("people are tired of live video calls") and went the opposite direction. 
+				Our second idea was inspired by question-answer communities like Quora and Reddit. What if we had a site for individuals to ask questions and get thoughtful, professional responses from therapists? 
+				Haven 2.0 explored taking the good parts of Quora (specific, categorized questions) with Reddit (community-based, emphasis on the individual + profiles) and adding a mental health & wellness lens. 
+			</br></br>
+				We ultimately decided not to go this direction because providers expressed that it would be difficult to provide advice with little context, and it was difficult to stike a balance between a provider's need for "their own space" and the broad world of Q&A's
+
 			</div>
 			<img class="summary_image" src="../assets/havenb-1.png"/>
 			<img class="summary_image outline" src="../assets/havenb-4.png"/>
@@ -95,7 +104,13 @@
 		</br></br>
 			<div class="card_title">Iteration 3: The Community App</div>
 			<div class="content_text">
-                (write-up coming soon)
+				Third time's (almost) the charm! We combined parts that resonated in the previous two ideas into our Haven 3.0, the community app! 
+				Users would be able to attend live video sessions as a camera-off observer, or "raise their hand" and participate if they'd like (lessons learned from our first idea). Providers would be able to manage their own "haven" community space and use free live video sessions as a way to introduce users to their haven (lessons learned from our second idea). 
+			</br></br>
+				We designed and developed the Haven mobile app over the course of three months and held various test sessions from our marketing efforts to garner interest and attention. 
+			</br></br>
+				Haven was almost a success, and maybe it could have been had we changed a few parts of our approach. At one point we had over 300 active users and a handful of providers, but we found that folks didn't want to use this as frequently as they would need for the platform to be successful, and ultimately we called off the project in favor of a more practical idea. 
+
 			</div>
 			<div class="container_sideBySide"> 
 				<div class="sideBySideItem width_25">
@@ -136,7 +151,23 @@
                         <img class="summary_image" src="../assets/havene-3.png"/>
 				</div>
 			</div>
-		<br>
+		</br></br>
+		<div class="card_title">Lessons Learned</div>
+		<div class="content_text">
+			While Haven ultimately failed to launch, I consider the lessons-learned a success:
+		</br></br>
+		Find the market
+		</br>This one's a little embarrassing - I'm pretty sure the number one reason startups fail is because they didn't find the right market. We thought we were on the right track, but turns out people aren't always great judges of their predicted behavior or whether or not they'll actually pay for something (or, perhaps, we just didn't ask the right questions).
+		</br></br>
+		When starting out, sales and marketing are more important than building our a beautiful product
+		</br>This one is so important. We wanted to build something good before our users started signing up. Turns out, it's more important to get more users on a very bare-bones MVP so that we can validate ideas and not waste any development time. 
+		</br></br>
+		Pivoting is OK
+		</br>If something's not working, it's better to fail fast and move on. It's a shame we couldn't continue working on Haven 3.0, but I'm excited about where our pivot, <a href="superbill.html" class="link">SuperBill</a>, will go. 
+
+
+
+		</div>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50">
